<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SenseAR</string>
    <string name="video_effect">视频特效</string>
    <string name="image_effect">图片特效</string>
    <string name="cpu_filter">CPU滤镜</string>
    <string name="loading">正在加载资源文件...</string>
    <string name="powered_by">Softsugar V9.4.0</string>
    <string name="frame_radio">单帧耗时：</string>
    <string name="cpu_radio">CPU占用率：</string>
    <string name="frame_rate">帧率：</string>
    <string name="saving_image">图片保存成功</string>
    <string name="debug_info">单帧耗时：%1$dms\n帧率：%2$f\nCPU占用率：%3$s</string>
    <string name="dlg_title">温馨提示</string>
    <string name="dlg_des">点击屏幕底部按钮可拍照，长按可录制短视频！</string>
    <string name="dlg_ok">好</string>
    <string name="dlg_ok2">确定</string>
    <string name="dlg_cancel">取消</string>
    <string name="dlg_give_up">放弃保存当前拍摄内容</string>
    <string name="dlg_loading">加载中...</string>
    <string name="sticker_new">最新</string>
    <string name="sticker_2D">2D</string>
    <string name="sticker_3D">3D</string>
    <string name="sticker_handle">手势</string>
    <string name="sticker_bg">分割</string>
    <string name="sticker_bx">变形</string>
    <string name="sticker_lizi">粒子</string>
    <string name="sticker_cat">动物</string>
    <string name="sticker_big_head">大头</string>
    <string name="sticker_clone">影分身</string>
    <string name="sticker_face">抠脸</string>
    <string name="sticker_play">特效玩法</string>
    <string name="sticker_track">物体跟踪</string>
    <string name="sticker_avatar">Avatar</string>
    <string name="sticker_tryon">TRYON</string>
    <string name="sticker_gan">GAN</string>
    <string name="sticker_cartoon">漫画脸</string>
    <string name="sticker_local">本地</string>
    <string name="sticker_add">叠加</string>
    <string name="sticker_sync">同步</string>
    <string name="sticker_img">相册</string>
    <string name="str_test_tab">测试</string>
    <string name="menu_title_full_beauty">整体效果</string>
    <string name="menu_title_style">风格妆</string>
    <string name="menu_title_base">基础美颜</string>
    <string name="menu_title_reshape">美形</string>
    <string name="menu_title_plastic">微整形</string>
    <string name="menu_title_3d_plastic">3D微整形</string>
    <string name="menu_title_filter">滤镜</string>
    <string name="menu_title_tone">调整</string>
    <string name="menu_title_bokeh">背景虚化</string>
    <string name="menu_title_mt">美体</string>
    <string name="whole_filter">滤镜</string>
    <string name="whole_default">Default</string>
    <string name="whole_tianran">tianran</string>
    <string name="whole_sweetgirl">sweetgirl</string>
    <string name="whole_oxygen">oxygen</string>
    <string name="whole_redwine">redwine</string>
    <string name="whole_sweet">sweet</string>
    <string name="whole_western">western</string>
    <string name="whole_whitetea">whiteTea</string>
    <string name="whole_zhigan">zhigan</string>
    <string name="whole_deep">deep</string>
    <string name="whole_zipaiyuanqi">自拍元气</string>
    <string name="whole_zipaiziran">自拍自然</string>
    <string name="whole_zhiboziran">直播自然</string>
    <string name="whole_zhiboyuanqi">直播元气</string>
    <string name="whole_zhiboyuanhua">直播原画</string>
    <string name="basic_bokeh1">背景虚化1</string>
    <string name="basic_bokeh2">背景虚化2</string>
    <string name="basic_whiten">美白</string>
    <string name="basic_whiten1">美白1</string>
    <string name="basic_whiten2">美白2</string>
    <string name="basic_whiten3">美白3</string>
    <string name="basic_whiten4">美白4</string>
    <string name="basic_whiten_nature">自然</string>
    <string name="basic_whiten_pink">粉嫩</string>
    <string name="basic_whiten_black">美黑</string>
    <string name="basic_redden">红润</string>
    <string name="basic_smooth">磨皮</string>
    <string name="basic_smooth1">磨皮1</string>
    <string name="basic_smooth2">磨皮2</string>
    <string name="basic_smooth3">磨皮3</string>
    <string name="basic_smooth4">磨皮4</string>
    <string name="basic_smooth_gan">gan肤质</string>
    <string name="basic_btn_face">脸部</string>
    <string name="basic_btn_body">全身</string>
    <string name="basic_face_strength">脸部强度</string>
    <string name="basic_body_strength">身体强度</string>
    <string name="str_full_body">身体磨皮</string>
    <string name="reshape_shrink_face">瘦脸</string>
    <string name="reshape_high_face">高阶瘦脸</string>
    <string name="reshape_enlarge_eye">大眼</string>
    <string name="reshape_shrink_jaw">小脸</string>
    <string name="reshape_narrow_face">窄脸</string>
    <string name="reshape_round_eye">圆眼</string>
    <string name="reshape_nature">自然</string>
    <string name="reshape_nvsh">女神</string>
    <string name="reshape_long_face">长脸</string>
    <string name="reshape_round_face">圆脸</string>
    <string name="plastic_thinner_mouth_corner">微笑嘴角</string>
    <string name="plastic_thinner_hair_line">发际线</string>
    <string name="plastic_thinner_eye_heigh">眼睛上下移</string>
    <string name="plastic_thinner_head">小头</string>
    <string name="plastic_thinner_head2">小头2</string>
    <string name="plastic_thin_face">瘦脸型</string>
    <string name="plastic_chin_length">下巴</string>
    <string name="plastic_hairline_height">额头</string>
    <string name="plastic_jaw">瘦下颔</string>
    <string name="plastic_apple_musle">苹果肌</string>
    <string name="plastic_narrow_nose">瘦鼻翼</string>
    <string name="plastic_nose_length">长鼻</string>
    <string name="plastic_profile_rhinoplasty">侧脸隆鼻</string>
    <string name="plastic_mouth_size">嘴型</string>
    <string name="plastic_philtrum_length">缩人中</string>
    <string name="plastic_eye_distance">眼距</string>
    <string name="plastic_eye_angle">眼睛角度</string>
    <string name="plastic_open_canthus">开眼角</string>
    <string name="plastic_bright_eye">亮眼</string>
    <string name="plastic_black_eye">祛黑眼圈</string>
    <string name="plastic_wrinkle">祛法令纹</string>
    <string name="plastic_white_teeth">白牙</string>
    <string name="plastic_cheekbone">瘦颧骨</string>
    <string name="plastic_open_external_canthus">开外眼角</string>
    <string name="plastic_fuller_lips">丰唇</string>
    <string name="plastic_mouth_width">嘴巴宽度</string>
    <string name="plastic_brow_height">眉毛高低</string>
    <string name="plastic_brow_thickness">眉毛粗细</string>
    <string name="plastic_brow_distance">眉毛间距</string>
    <string name="plastic_face_v_shape">V下巴</string>
    <string name="plastic_face_full_vshape">V脸</string>
    <string name="plastic_nose_tip">鼻头</string>
    <string name="plastic_nose_bridge">鼻梁</string>
    <string name="plastic_enlarge_pupil">瞳孔大小</string>
    <string name="plastic_3d_eye_1">眼睛比例</string>
    <string name="plastic_3d_eye_2">眼高</string>
    <string name="plastic_3d_eye_3">眼距</string>
    <string name="plastic_3d_eye_4">外眼角</string>
    <string name="plastic_3d_eye_5">眼睛深浅</string>
    <string name="plastic_3d_eye_6">卧蚕深浅</string>
    <string name="plastic_3d_eye_7">眼睛角度</string>
    <string name="plastic_3d_eye_outereyetail">外眼尾</string>
    <string name="plastic_3d_eye_innercorner">内眼角尖</string>
    <string name="plastic_3d_nose_1">鼻子比例</string>
    <string name="plastic_3d_nose_2">鼻宽</string>
    <string name="plastic_3d_nose_3">鼻长</string>
    <string name="plastic_3d_nose_4">鼻高</string>
    <string name="plastic_3d_nose_5">鼻根</string>
    <string name="plastic_3d_nose_6">鼻子驼峰</string>
    <string name="plastic_3d_nose_7">鼻尖</string>
    <string name="plastic_3d_nose_8">鼻翼</string>
    <string name="plastic_3d_mouth_1">嘴巴比例</string>
    <string name="plastic_3d_mouth_2">嘴巴高度</string>
    <string name="plastic_3d_mouth_3">嘴巴宽度</string>
    <string name="plastic_3d_mouth_4">嘴巴深度</string>
    <string name="plastic_3d_mouth_5">嘴巴厚度</string>
    <string name="plastic_3d_head_1">头部比例</string>
    <string name="plastic_3d_head_2">头部宽度</string>
    <string name="plastic_3d_face_1">脸部胖瘦</string>
    <string name="plastic_3d_face_2">脸部角度</string>
    <string name="plastic_3d_face_3">脸部外扩</string>
    <string name="plastic_3d_face_4">脸部内缩</string>
    <string name="plastic_3d_face_5">嘟嘟唇</string>
    <string name="plastic_3d_face_6">微笑唇</string>
    <string name="plastic_3d_face_7">苹果肌</string>
    <string name="plastic_3d_face_8">脸部轮廓</string>
    <string name="micro_3d_forehead">额头</string>
    <string name="micro_3d_nasolabial">法令纹</string>
    <string name="micro_3d_tearditch">泪沟</string>
    <string name="micro_3d_browbone">眉骨</string>
    <string name="micro_3d_raiseeyebrows">挑眉</string>
    <string name="micro_3d_temple">太阳穴</string>
    <string name="micro_3d_foreheadtwo">侧额头</string>
    <string name="str_bottom_group_mouth">嘴巴</string>
    <string name="str_bottom_group_eye">眼睛</string>
    <string name="str_bottom_group_nose">鼻子</string>
    <string name="str_bottom_group_head">头部</string>
    <string name="str_bottom_group_face">脸部</string>
    <string name="str_bottom_group_face_shape">脸型</string>
    <string name="str_bottom_group_eyebrow">眉毛</string>
    <string name="make_up_whole">整妆</string>
    <string name="make_up_hair">染发</string>
    <string name="make_up_lipstick">口红</string>
    <string name="make_up_blusher">腮红</string>
    <string name="make_up_highlight">修容</string>
    <string name="make_up_brow">眉毛</string>
    <string name="make_up_eye_shadow">眼影</string>
    <string name="make_up_eye_liner">眼线</string>
    <string name="make_up_eyelash">眼睫毛</string>
    <string name="make_up_eyeball">美瞳</string>
    <string name="filter_texture">质感</string>
    <string name="filter_film">胶片</string>
    <string name="filter_vintage">复古</string>
    <string name="filter_portrait">人物</string>
    <string name="filter_scenery">风景</string>
    <string name="filter_still_life">静物</string>
    <string name="filter_food">美食</string>
    <string name="adjust_contrast">对比度</string>
    <string name="adjust_saturation">饱和度</string>
    <string name="adjust_sharpen">锐化</string>
    <string name="adjust_clear">清晰度</string>
    <string name="adjust_denoising">去噪</string>
    <string name="adjust_color_tone">色调</string>
    <string name="adjust_color_temperature">色温</string>
    <string name="set_resolution">分辨率</string>
    <string name="set_performance">性能展示</string>
    <string name="set_terms">使用条款</string>
    <string name="set_language">语言切换</string>
    <string name="set_yuv_rgba">Replay</string>
    <string name="camera_contrast">对比</string>
    <string name="camera_sticker">特效</string>
    <string name="camera_filter">滤镜</string>
    <string name="camera_effect">美颜</string>
    <string name="camera_clear">清零</string>
    <string name="camera_reset">重置</string>
    <string name="camera_save">保存</string>
    <string name="camera_save_video">保存视频</string>
    <string name="camera_preview">预览</string>
    <string name="camera_video">视频</string>
    <string name="camera_take">拍摄</string>
    <string name="camera_style">风格</string>
    <string name="camera_cartoon">漫画脸</string>
    <string name="camera_ai_paint">AI作图</string>
    <string name="camera_all">全部效果</string>
    <string name="camera_nature">自然</string>
    <string name="camera_light">轻妆</string>
    <string name="camera_popular">流行</string>
    <string name="toast_save_img">图片保存成功</string>
    <string name="toast_save_video">视频保存成功</string>
    <string name="toast_short_video">视频录制时间小于2s，请重新录制</string>
    <string name="toast_start_video">开始处理</string>
    <string name="toast_video_error">视频处理出错或取消，请重试</string>
    <string name="toast_video_done">视频处理完成并保存</string>
    <string name="toast_save_video_success">保存成功</string>
    <string name="toast_net_error">无法连接网络，请检查网络设置</string>
    <string name="toast_error_license">授权失败，请检查网络或者License</string>
    <string name="toast_sticker_pull">列表正在拉取或拉取出错</string>
    <string name="toast_take_goog_face">请拍摄清晰人脸照片</string>
    <string name="toast_shoes">光脚体验效果更佳</string>
    <string name="toast_gan_rotate">此特效不支持屏幕翻转</string>
    <string name="try_on_back">返回</string>
    <string name="tryon_lip_finish">质地</string>
    <string name="tryon_color">颜色</string>
</resources>