<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_root"
    android:layout_width="match_parent"
    android:layout_height="122dp"
    tools:background="#CD6565"
    tools:ignore="ContentDescription">

    <softsugar.senseme.com.effects.view.widget.DrawableTextView
        android:id="@+id/dt_sticker"
        style="@style/BottomMenuTextStyle"
        android:text="@string/camera_sticker"
        app:drawableTop="@drawable/ic_camera_sticker"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <softsugar.senseme.com.effects.view.widget.DrawableTextView
        style="@style/BottomMenuTextStyle"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iv_style"
        app:layout_constraintStart_toEndOf="@id/dt_sticker"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_style"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <softsugar.senseme.com.effects.view.widget.DrawableTextView
        android:id="@+id/dt_filter"
        style="@style/BottomMenuTextStyle"
        android:text="@string/camera_filter"
        app:drawableTop="@drawable/ic_camera_filter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/dt_effect"
        app:layout_constraintStart_toEndOf="@id/iv_style"
        app:layout_constraintTop_toTopOf="parent" />

    <softsugar.senseme.com.effects.view.widget.DrawableTextView
        android:id="@+id/dt_effect"
        style="@style/BottomMenuTextStyle"
        android:text="@string/camera_effect"
        app:drawableTop="@drawable/ic_camera_effect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dt_filter"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>