<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:clickable="true"
    android:focusable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_center_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#fff"
            android:gravity="center"
            tools:text="口红"
            android:textColor="#525252"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#EEEEEE"
            app:layout_constraintBottom_toBottomOf="@id/tv_center_title" />

        <softsugar.senseme.com.effects.view.widget.DrawableTextView
            android:id="@+id/dt_makeup_back"
            style="@style/WrapWrap"
            android:layout_marginStart="8dp"
            android:drawablePadding="3dp"
            android:padding="10dp"
            android:text="@string/try_on_back"
            android:textColor="#525252"
            android:textSize="12sp"
            app:drawableHeight="12dp"
            app:drawableLeft="@drawable/ic_back"
            app:drawableWidth="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <softsugar.senseme.com.effects.view.widget.DrawableTextView
        android:id="@+id/dt_zhidi"
        style="@style/TryOnBtn"
        android:layout_marginStart="18dp"
        android:text="@string/tryon_lip_finish"
        android:textColor="#525252"
        app:drawableTop="@drawable/selector_tryon_zhd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:ignore="HardcodedText" />

    <softsugar.senseme.com.effects.view.widget.DrawableTextView
        android:id="@+id/dt_color"
        style="@style/TryOnBtn"
        android:layout_marginStart="4dp"
        android:text="@string/tryon_color"
        android:textColor="#525252"
        app:drawableTop="@drawable/selector_tryon_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/dt_zhidi"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        tools:ignore="HardcodedText" />

    <View
        android:id="@+id/view_line"
        android:layout_width="1dp"
        android:layout_height="19dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="10dp"
        android:background="#d2d2d2"
        app:layout_constraintLeft_toRightOf="@id/dt_color"
        app:layout_constraintTop_toBottomOf="@id/tv_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/view_line"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/dt_color"
        tools:layout_height="50dp" />

    <!--    <softsugar.senseme.com.effects.view.widget.TryOnColorPickerView-->
    <!--        android:id="@+id/color_picker"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        android:visibility="gone"-->
    <!--        app:pickViewType="lip" />-->

</androidx.constraintlayout.widget.ConstraintLayout>